2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Delete unused shell func.

	* common (copyall): Delete func.

2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Use Automake for generating top-level test driver.

	* common: Rename from common.in.
	* Makefile.am (EXTRA_DIST): Add common.
	(check-TESTS): Delete target.
	(srcdir): Delete now-redundant var.

2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Make test wd in common; arrange for cleanup there, too.

	* common.in: Add load-time actions: Make pristine test
	working directory and optionally arrange for its removal.
	* Makefile.am (check-TESTS): No longer do wd setup/cleanup.
	* t999.test: At end, cd ..; don't delete working files.

2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Do stdout/stderr split in shell func, not in makefile.

	* Makefile.am (check-TESTS): Don't redirect stdout/stderr.
	* common.in (split_std_out_err): New func.
	(dontsplit): Delete func.
	* alive.test: Use ‘split_std_out_err’.
	* t000.test: Likewise.
	* t001.test: Likewise.
	* t999.test: Likewise.

2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Use Automake for building xorlf.

	* Makefile.am (check_PROGRAMS): New var.
	* t999.test (xorlf): New var; use it for xorlf invocation.
	* xorlf.c: New file.

2010-10-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Use Automake for test preparation.

	* Makefile.am (check_SCRIPTS): New var.
	(check-TESTS): Clear prereq list.

2010-09-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Simplify ‘PATHPREFIX’ Makefile-internal protocol.

	* Makefile.am (PATHPREFIX): Init to the absolute name of
	the 0pre/bin directory under the build-tree src/.
	(TESTS_ENVIRONMENT): Don't run pwd(1).
	(installcheck-local): Rename target from ‘installcheck’;
	omit trailing colon from ‘PATHPREFIX’ specification.

2010-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Centralize tests; do complicated test last.

	* t999.test: Rename from ../src/alive.test; use ./common for init;